# DEEQN64

./: BUILD_AND_CI_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  GITHUB_SETUP.md  README.md  REPO_STRUCTURE.md  ReadMe2.md  build.rs  pyproject.toml
.config/: config
.github/workflows/: quality.yml  release.yaml  tests.yaml
_runtime/: README.md  q64_stratified_engine.py  requirements.txt
refined_protocol/: ADR-001-PRODUCTION-ARCHITECTURE-SELECTION.md  DEPLOYMENT_LAYOUT_DEEQN64.md  Q64_EXECUTION_LAYER_SPEC.md  Q64_GOVERNANCE_KERNEL_FINAL.md  Q64_KERNEL_BRIDGE.md  Q64_MATHEMATICAL_FOUNDATIONS.md  SYSTEM_LAYOUT_SPEC_DEEQN64.md
src/: engine.rs  error.rs  lib.rs  metrics.rs  operator.rs
