[workspace]
members = ["q64-core"]
resolver = "2"

[package]
name = "deeqn64"
version = "1.0.0"
edition = "2021"
authors = ["DEEQN64 Contributors"]
license = "AGPL-3.0"
description = "Q64 Spectral Stability Certification Engine - Rust implementation"
repository = "https://github.com/Dedoc-9/DEEQN64"
readme = "README.md"
keywords = ["spectral-analysis", "stability-certification", "dynamical-systems"]
categories = ["science", "algorithms"]

[lib]
name = "deeqn64"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "q64-cli"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
# Core numerical computing
ndarray = "0.15"
ndarray-linalg = { version = "0.15", features = ["openblas-static"] }
openblas-src = { version = "0.10", optional = true }

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hdf5 = { version = "0.8", optional = true }

# Async runtime (for real-time monitoring)
tokio = { version = "1", features = ["full"], optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = ["python"]
python = []
cli = ["clap"]
hdf5-support = ["hdf5"]
async-runtime = ["tokio"]
native-build = ["openblas-src"]
full = ["python", "cli", "hdf5-support", "async-runtime", "native-build"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.bench]
inherits = "release"

[build]
rustflags = ["-C", "target-cpu=native"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
